# mcp-vision-server

./: .gitignore  .npmrc  CLAUDE.md  PROJECT.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
apps/api/: .env.example  Procfile  package.json  railway.toml  tsconfig.json  vitest.config.ts
apps/api/src/: app.ts  env.ts  index.ts  types.ts
apps/api/src/lib/: crypto.ts  errors.ts  jwt.ts  prisma.ts
apps/api/src/middleware/: audit.ts  auth.ts  rbac.ts
apps/api/src/plugins/: cors.ts  rate-limit.ts  websocket.ts
apps/api/src/test/: auth.test.ts  health.test.ts  keys.test.ts  servers.test.ts
apps/web/: index.html  package.json  tsconfig.json  tsconfig.node.json  vercel.json
apps/web/src/: App.tsx  router.tsx
apps/web/src/hooks/: use-auth.ts  use-keys.ts  use-logs.ts  (+2 more)
docs/: ops.md  user-guide.md
docs/superpowers/plans/: 2026-06-21-mcp-hub.md
docs/superpowers/specs/: 2026-06-21-mcp-hub-design.md
mcp_vision_server/: __init__.py  __main__.py  client.py  config.py  server.py
mcp_vision_server/providers/: __init__.py  base.py  catalog.py  registry.py
mcp_vision_server/providers/adapters/: __init__.py  openai_compat.py
mcp_vision_server/tools/: __init__.py  analyze_image.py  generate_image.py  video.py
mcp_vision_server/utils/: errors.py  media.py
scripts/: deploy.sh  uninstall.sh  update.sh
tests/: test_client.py  test_config.py  test_errors.py  test_media.py  test_tools_analyze.py  test_tools_generate.py  test_tools_video.py
tests/providers/: __init__.py  test_openai_compat.py  test_registry.py
(+44 files in other folders)
